// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`external classes > externaliized class of mt-32 should be excluded from the css 1`] = `
"/* layer: default */
.mb-24{margin-bottom:2.4rem;}
.mt-16{margin-top:1.6rem;}"
`;

exports[`external classes > externaliized class of mt-32 should be included if used with modifier 1`] = `
"/* layer: default */
.active\\\\:mt-32:active{margin-top:3.2rem;}
@media (min-width: 480px){
.sm\\\\:mt-32{margin-top:3.2rem;}
}
@media (min-width: 768px){
.md\\\\:mt-32{margin-top:3.2rem;}
}"
`;

exports[`external classes > externaliized classes of mt-32 and mb-32 should be excluded from the css 1`] = `
"/* layer: default */
.mt-16{margin-top:1.6rem;}"
`;
